<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.NoActionBar">
    <ImageView
        android:id="@+id/img_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_cancel"/>
    <TextView
        android:id="@+id/lbl_notice"
        android:layout_width="match_parent"
        android:layout_below="@+id/img_cancel"
        android:layout_height="wrap_content"
        android:text="@string/Notice_login"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_notice"
        android:visibility="gone"
        />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />
    <LinearLayout
        android:background="@drawable/shape_login"
        android:id="@+id/layout_login"
        android:layout_below="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/hint_user"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="10">
            <EditText
                android:id="@+id/txt_pass"
                android:layout_height="60dp"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
            <ImageView
                android:layout_weight="1"
                android:id="@+id/img_show_pass"
                android:layout_width="5dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/showpass_hint"/>
        </LinearLayout>


    </LinearLayout>
    <CheckBox
        android:id="@+id/chk_remerber_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Remeber_pass"
        android:layout_below="@+id/layout_login"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_loggin"
        android:textColor="@color/color_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonLogin"
        android:text="@string/Login"
        android:layout_margin="10dp"
        android:layout_below="@+id/chk_remerber_pass"/>
    <Button
        android:textColor="@color/color_text"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonRegis"
        android:text="@string/Sign_in"
        android:layout_margin="10dp"
        android:layout_below="@+id/btn_loggin"/>
    <Button
        android:textColor="@color/color_text"
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/Logout"
        android:layout_margin="10dp"
        android:layout_below="@+id/btn_register"/>

</RelativeLayout>