<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="right"
        android:theme="@style/AppTheme.NoActionBar">

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/Notice_register"
        android:textColor="@color/color_text_notice"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/User_title" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorDarkTin" />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/Pass"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_pass"
                android:backgroundTint="@color/colorDarkTin"
                android:inputType="textWebPassword" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/Name_title"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_name"
                android:backgroundTint="@color/colorDarkTin" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/phone_title"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_phone"
                android:backgroundTint="@color/colorDarkTin"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/Address_title"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_address"
                android:backgroundTint="@color/colorDarkTin" />
        </TableRow>
    </TableLayout>
    <View
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
        android:text="Đăng ký" />
</LinearLayout>