<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:background="@android:color/white"
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="80dp">
        <com.example.nguyen.project2.libs.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/personal"/>
        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_start"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>
    <LinearLayout
        android:id="@+id/linear_phone"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/shape_profile"
            android:src="@android:drawable/ic_menu_call"
            />
        <TextView
            android:id="@+id/lbl_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_start"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/shape_list_profile"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img_mail"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/shape_profile"
            android:src="@android:drawable/ic_dialog_email"
            />
        <TextView
            android:id="@+id/lbl_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_start"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <RelativeLayout
        android:clickable="true"
        android:id="@+id/relative_home"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img_home"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/shape_profile"
            android:src="@drawable/ic_home"
            />
        <TextView
            android:id="@+id/lbl_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_home"
            android:layout_centerInParent="true"
            android:text="@string/home_start"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/img_edit_home"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout
        android:clickable="true"
        android:id="@+id/linear_blog"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img_blog"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/shape_profile"
            android:src="@android:drawable/ic_menu_agenda"
            />
        <TextView
            android:id="@+id/lbl_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog_management"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>
    <ImageView
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:src="@drawable/img_invite_fb_now"/>

</LinearLayout>