<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:clickable="true"-->
                <!--android:gravity="right"-->
                <!--android:theme="@style/AppTheme.NoActionBar">-->

                <!--<ImageView-->
                <!--android:id="@+id/img_cancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/ic_cancel" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:id="@+id/layout_up_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/shape_up_photo"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <ImageView
                        android:id="@+id/img_up_photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/take_photo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/Take_photo_note"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_img_choose"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_choose"
                        android:layout_width="285dp"
                        android:layout_height="280dp"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/book_title" />

                    <ImageView
                        android:id="@+id/img_cancel_choose"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:src="@mipmap/ic_cancel" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txt_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/Hint_title" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/Category_text"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/sp_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9.5">

                        <EditText
                            android:id="@+id/txt_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/Hint_price"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="đ"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txt_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/Hint_content" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <Button
                    android:id="@+id/btn_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorButtonLogin"
                    android:text="@string/button_text" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/layout_type_up"
            android:clickable="true"
            android:background="#50aaaaaa"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <LinearLayout
                android:id="@+id/layout_take_photo"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_item"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/take_photo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_take_photo"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:clickable="true"
                android:id="@+id/layout_choose_photo_from_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_item"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/upload_photo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_choose_photo"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>